<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="common__app_name">SpeedGame</string>
    <string name="common__start_the_game">Start the game</string>
    <string name="common__cant_read_file">can not be read.</string>
    <string name="common__file_is_to_big">File is to big</string>
    <string name="common__ok">OK</string>
    <string name="common__yes">Yes</string>
    <string name="common__no">No</string>
    <string name="common__preview">Preview</string>
    <string name="common__field_to_short1">Field is to short, you should provide at least</string>
    <string name="common__field_to_short2">characters.</string>
    <string name="common__field_to_long1">Field is to long, you should provide at most</string>
    <string name="common__field_to_long2">characters.</string>


    <string name="newgame__title">New Game</string>
    <string name="newgame__time_per_player">Choose time</string>
    <string name="newgame__sound">Sounds</string>
    <string name="newgame__on_timeout">Choose game mode</string>
    <string name="newgame__change_account">Change profile</string>
    <string name="newgame__next">Next</string>
    <string name="newgame__proper_time">Incorrect time</string>
    <string name="newgame__loose_game">Till end of time</string>
    <string name="newgame__negative_time">Penalty points</string>
    <string name="newgame__game_ends">Game ends when</string>
    <string name="newgame__one">One player left</string>
    <string name="newgame__none">None player left</string>



    <string name="game__title">Game</string>
    <string name="game__loose_game">Loose game</string>
    <string name="game__game_name">Name of the Game</string>
    <string name="game__timeout_loose1">Player</string>
    <string name="game__timeout_loose2">loose the game.</string>
    <string name="game__timeout_negative1">Player</string>
    <string name="game__timeout_negative2">has reached timeout, from now negative time will be counted.</string>
    <string name="game__win1">Player</string>
    <string name="game__win2">has won the game. Congratulations!</string>
    <string name="game__lost">lost!</string>
    <string name="game__start_the_game">Click anywhere to start the game!</string>
    <string name="game__next_player">Click anywhere to end your move.</string>
    <string name="game__really_loose">Did you loose?</string>
    <string name="game__pause">Paused</string>
    <string name="game__back_to_game">Back to game?</string>


    <string name="login__play">Play</string>
    <string name="login__login_btn">Login</string>
    <string name="login__login">Login/Nick</string>
    <string name="login__password">Password</string>
    <string name="login__new_account">Create new user</string>
    <string name="login__error">An error occurred during communication with server.</string>
    <string name="login__no_account">You can play without an account - enter your nick and go!</string>
    <string name="login__invalid_login_or_password">Invalid login or password. Please retype and try again.
        You may also create new account.
    </string>



    <string name="register__title">Create new user</string>
    <string name="register__update_title">Change profile</string>
    <string name="register__avatar">Avatar</string>
    <string name="register__ring">Ring</string>
    <string name="register__login">Login</string>
    <string name="register__password">Password</string>
    <string name="register__email">Email</string>
    <string name="register__retype">Retype</string>
    <string name="register__register">Create an account</string>
    <string name="register__change">Select</string>
    <string name="register__default_avatar">avatar.jpg</string>
    <string name="register__default_ring">ring.mp3</string>
    <string name="register__choose_avatar">Please select an avatar.</string>
    <string name="register__choose_ring">Please select a ring.</string>
    <string name="register__error">An error occurred during connection to server.</string>
    <string name="register__user_exists">User with the same login already exists.</string>
    <string name="register__validate">Please fill and validate all the fields before registration.</string>
    <string name="register__sending_file">Sending files, please wait...</string>
    <string name="register__update">Update</string>
    <string name="register__email_valid_error">Please enter valid email. ex. abc@example.com</string>
    <string name="register__retype_valid_error">Retyped password should match original password</string>
    <string name="register__login_valid_error">Username may consist of a-z, 0-9, underscores, begin with a letter.
    </string>
    <string name="register__password_valid_error">Password may consist of a-z, 0-9, underscores, begin with a letter.
    </string>



    <string name="choosefile__open">Open</string>
    <string name="choosefile__pick">Pick</string>


    <string name="offline__title">Offline</string>
    <string name="offline__nick">Nick</string>
    <string name="offline__change">Select</string>
    <string name="offline__play">Add</string>
    <string name="offline__warning">Warning! You are currently offline. Your settings will not be saved on server.
    </string>


    <string name="users__play">Play</string>
    <string name="users__back">Back</string>
    <string name="users__title">Game Setup</string>
    <string name="users__at_least_two">You need at least two players to start the game.</string>
    <string name="users__at_least_one">You need at least one player to start the game.</string>

</resources>
