<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_margin="5dip"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/login__info"/>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:labelFor="@+id/login__login"
            android:layout_width="@dimen/register_small"
            android:layout_height="wrap_content"
            android:text="@string/login__login"/>

        <EditText
            android:inputType="textNoSuggestions"
            android:id="@+id/login__login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:labelFor="@+id/login__password"
            android:layout_width="@dimen/register_small"
            android:layout_height="wrap_content"
            android:text="@string/login__password"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/login__password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:id="@+id/login__login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login__login_btn"/>

    <Button
        android:id="@+id/login__new"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:text="@string/login__new_account"/>

    <Space
        android:layout_height="40dip"
        android:layout_width="match_parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login__no_account"/>

        <Button
            android:id="@+id/offline__play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/login__play"/>

    </LinearLayout>

</LinearLayout>